--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
