--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.application.name=relational
+
+# Spring Datasource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/payments_db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+# Data initialization
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+
+# Specify the location of the data.sql file
+spring.datasource.data=classpath:data.sql
+
+# Liquibase configurations
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+#spring.liquibase.enabled=false
