update costumer - bank relationship

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,8 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Data initialization
-spring.datasource.initialization-mode=always
-spring.sql.init.mode=always
-
-# Specify the location of the data.sql file
-spring.datasource.data=classpath:data.sql
-
-# Liquibase configurations
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-#spring.liquibase.enabled=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
