--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
+
+#spring.liquibase.enabled=true
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
