Changing DB to H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,23 @@
 spring.application.name=relational
 
-# Spring Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/payments_db
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# Hibernate configuration
-spring.jpa.database=mysql
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
 
-#spring.liquibase.enabled=true
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+# H2 Console Configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Data Initialization
+#spring.sql.init.mode=embedded
+#spring.sql.init.data-locations=classpath:data.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.initialization-mode=embedded
