--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=relational
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -19,5 +19,5 @@ spring.h2.console.path=/h2-console
 # Data Initialization
 #spring.sql.init.mode=embedded
 #spring.sql.init.data-locations=classpath:data.sql
-#spring.jpa.defer-datasource-initialization=true
-#spring.datasource.initialization-mode=embedded
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.initialization-mode=always
